// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array Item component should NOT render moveUp/moveDown with no reorder callback 1`] = `
<div
  className="theme-tf-array-item tf-array-item"
>
  <div
    className="theme-control"
  >
    <button
      className="theme-delete"
      id="talend-control-3-delete"
      onClick={[Function]}
      title="Delete"
      type="button"
    >
      <Icon
        name="talend-trash"
      />
    </button>
  </div>
  <span>
    This is the item content
  </span>
</div>
`;

exports[`Array Item component should NOT render reorder control panel when value.isClosed is true 1`] = `
<div
  className="theme-tf-array-item tf-array-item"
>
  <div
    className="theme-control"
  >
    <button
      className="theme-delete"
      id="talend-control-3-delete"
      onClick={[Function]}
      title="Delete"
      type="button"
    >
      <Icon
        name="talend-trash"
      />
    </button>
  </div>
  <span>
    This is the item content
  </span>
</div>
`;

exports[`Array Item component should disable moveDown 1`] = `
<div
  className="theme-tf-array-item tf-array-item"
>
  <div
    className="theme-control"
  >
    <button
      className="theme-delete"
      id="talend-control-3-delete"
      onClick={[Function]}
      title="Delete"
      type="button"
    >
      <Icon
        name="talend-trash"
      />
    </button>
    <Translate(ReorderButton)
      hasMoveDown={false}
      hasMoveUp={true}
      id="talend-control-3"
      index={3}
      onRemove={[Function]}
      onReorder={[Function]}
      value={Object {}}
    >
      <span>
        This is the item content
      </span>
    </Translate(ReorderButton)>
    <Translate(ReorderButton)
      hasMoveDown={false}
      hasMoveUp={true}
      id="talend-control-3"
      index={3}
      isMoveDown={true}
      onRemove={[Function]}
      onReorder={[Function]}
      value={Object {}}
    >
      <span>
        This is the item content
      </span>
    </Translate(ReorderButton)>
  </div>
  <span>
    This is the item content
  </span>
</div>
`;

exports[`Array Item component should disable moveUp 1`] = `
<div
  className="theme-tf-array-item tf-array-item"
>
  <div
    className="theme-control"
  >
    <button
      className="theme-delete"
      id="talend-control-3-delete"
      onClick={[Function]}
      title="Delete"
      type="button"
    >
      <Icon
        name="talend-trash"
      />
    </button>
    <Translate(ReorderButton)
      hasMoveDown={true}
      hasMoveUp={false}
      id="talend-control-3"
      index={3}
      onRemove={[Function]}
      onReorder={[Function]}
      value={Object {}}
    >
      <span>
        This is the item content
      </span>
    </Translate(ReorderButton)>
    <Translate(ReorderButton)
      hasMoveDown={true}
      hasMoveUp={false}
      id="talend-control-3"
      index={3}
      isMoveDown={true}
      onRemove={[Function]}
      onReorder={[Function]}
      value={Object {}}
    >
      <span>
        This is the item content
      </span>
    </Translate(ReorderButton)>
  </div>
  <span>
    This is the item content
  </span>
</div>
`;

exports[`Array Item component should render control panel with item content 1`] = `
<div
  className="theme-tf-array-item tf-array-item"
>
  <div
    className="theme-control"
  >
    <button
      className="theme-delete"
      id="talend-control-3-delete"
      onClick={[Function]}
      title="Delete"
      type="button"
    >
      <Icon
        name="talend-trash"
      />
    </button>
    <Translate(ReorderButton)
      hasMoveDown={true}
      hasMoveUp={true}
      id="talend-control-3"
      index={3}
      onRemove={[Function]}
      onReorder={[Function]}
      value={Object {}}
    >
      <span>
        This is the item content
      </span>
    </Translate(ReorderButton)>
    <Translate(ReorderButton)
      hasMoveDown={true}
      hasMoveUp={true}
      id="talend-control-3"
      index={3}
      isMoveDown={true}
      onRemove={[Function]}
      onReorder={[Function]}
      value={Object {}}
    >
      <span>
        This is the item content
      </span>
    </Translate(ReorderButton)>
  </div>
  <span>
    This is the item content
  </span>
</div>
`;
